--- a/assignments.html
+++ b/assignments.html
@@ -15,7 +15,7 @@
     <header>
         <h1>Assignments</h1></header>
         <ul>
-        <li><a href="~/MOD5_HW/homework2_working.html">Mini Project 2</a></li>
+        <li><a href="/MOD5_HW/homework2_working.html">Mini Project 2</a></li>
         </ul>
     </article>
     </body>
